--- a/src/Muflone.Transport.Azure.Saga/Muflone.Transport.Azure.Saga.csproj
+++ b/src/Muflone.Transport.Azure.Saga/Muflone.Transport.Azure.Saga.csproj
@@ -14,6 +14,7 @@
     <RepositoryUrl>https://github.com/CQRS-Muflone/Muflone.Transport.Azure.Saga</RepositoryUrl>
     <PackageTags>Broker, MS Azure, CQRS, Saga, Event Sourcing</PackageTags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageVersion>6.1.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
