--- a/src/Muflone.Transport.Azure.Saga/Muflone.Transport.Azure.Saga.csproj
+++ b/src/Muflone.Transport.Azure.Saga/Muflone.Transport.Azure.Saga.csproj
@@ -14,6 +14,8 @@
     <RepositoryUrl>https://github.com/CQRS-Muflone/Muflone.Transport.Azure.Saga</RepositoryUrl>
     <PackageTags>Broker, MS Azure, CQRS, Saga, Event Sourcing</PackageTags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageVersion>8.1.1</PackageVersion>
   </PropertyGroup>
 
